# nyc-taxi-automated-reports

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: testing.yaml
data_worker/: config.py  main.py  s3_storage.py  taxi_data.py
data_worker/data_worker/: data_worker.py
taxi_data_reporter/: config.py  main.py  reporter.py  s3_storage.py  taxi_data.py  test_main.py
